fix smoke test and sonar issues